--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,26 +1,25 @@
 // bower:scss
 @import "../bower_components/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap.scss";
 // endbower
-
 @import "_functions";
 
-$width: 400px;
-$min-tile-count: 3;
-$max-tile-count: 6;
-$tile-padding: 15px;
+$width: 600px;
+$min-tile-count: 2;
+$max-tile-count: 30;
+$tile-padding: 5px;
 $tile-radius: 3px;
 $tile-font: 'Open Sans', sans-serif;
-$colors:  #EEE4DA, // 2
-          #EAE0C8, // 4
-          #F59563, // 8
-          #3399ff, // 16
-          #ffa333, // 32
-          #cef030, // 64
-          #E8D8CE, // 128
-          #990303, // 256
-          #6BA5DE, // 512
-          #DCAD60, // 1024
-          #B60022; // 2048
+$colors: #EEE4DA,
+         #EAE0C8,
+         #F59563,
+         #3399ff,
+         #ffa333,
+         #cef030,
+         #E8D8CE,
+         #990303,
+         #6BA5DE,
+         #DCAD60,
+         #B60022;
 
 $game-container-background: #bbada0;
 $tile-color: #eee4da;
@@ -37,31 +36,31 @@ $transition-time: 170ms;
 }
 
 html, body {
-  margin: 0;
-  padding: 0;
+  margin:      0;
+  padding:     0;
 
-  background: #faf8ef;
-  color: $text-color;
+  background:  #faf8ef;
+  color:       $text-color;
   font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
-  font-size: 18px;
+  font-size:   18px;
 }
 
 p {
-   margin-top: 0;
-   margin-bottom: 10px;
-   line-height: 1.65;
-   display: block;
-   -webkit-margin-before: 1em;
-   -webkit-margin-after: 1em;
-   -webkit-margin-start: 0px;
-   -webkit-margin-end: 0px;
+  margin-top:            0;
+  margin-bottom:         10px;
+  line-height:           1.65;
+  display:               block;
+  -webkit-margin-before: 1em;
+  -webkit-margin-after:  1em;
+  -webkit-margin-start:  0px;
+  -webkit-margin-end:    0px;
 }
 
 a {
-  color: $text-color;
-  font-weight: bold;
+  color:           $text-color;
+  font-weight:     bold;
   text-decoration: underline;
-  cursor: pointer;
+  cursor:          pointer;
   &:hover {
     color: darken($text-color, 5%);
   }
@@ -74,190 +73,188 @@ strong {
 }
 
 hr {
-  border: none;
+  border:        none;
   border-bottom: 1px solid lighten($text-color, 40%);
-  margin-top: 20px;
+  margin-top:    20px;
   margin-bottom: 30px;
 }
 
 #heading {
-   margin-top: 4em;
+  margin-top: 3em;
 }
 
 h1.title {
-   font-size: 80px;
-   font-weight: bold;
-   margin: 0;
-   display: block;
-   float: left;
+  font-size:   35px;
+  font-weight: bold;
+  margin:      0;
+  display:     block;
+  float:       left;
 }
 
-.scores-container {
-  text-align: right;
-  float: right;
+#settings {
+  margin-top: 1em;
 }
 
-.score-container, .best-container {
+.worldSize-container, .predatorLocation-container, .preyLocation-container {
   $inner-height: 25px;
 
-  min-height: 2.5em;
-  min-width: 5em;
-
-  position: relative;
-  display: inline-block;
-  background: $game-container-background;
-  padding: 15px 25px;
-  font-size: $inner-height;
-  height: $inner-height;
-  line-height: $inner-height + 22px;
-  font-weight: bold;
+  position:      relative;
+  background:    $game-container-background;
+  padding:       30px 25px 15px;
+  font-size:     $inner-height;
+  font-weight:   bold;
   border-radius: 3px;
-  color: white;
-  margin-top: 8px;
-  text-align: center;
+  color:         white;
+  margin-top:    8px;
+  text-align:    center;
 
   &:after {
-    position: absolute;
-    width: 100%;
-    top: 10px;
-    left: 0;
+    position:       absolute;
+    width:          100%;
+    top:            10px;
+    left:           0;
     text-transform: uppercase;
-    font-size: 13px;
-    line-height: 13px;
-    text-align: center;
-    color: $tile-color;
+    font-size:      13px;
+    line-height:    13px;
+    text-align:     center;
+    color:          $tile-color;
   }
 
   .score-addition {
-    position: absolute;
-    right: 30px;
-    color: red;
-    font-size: $inner-height;
+    position:    absolute;
+    right:       30px;
+    color:       red;
+    font-size:   $inner-height;
     line-height: $inner-height;
     font-weight: bold;
-    color: rgba($text-color, .9);
-    z-index: 100;
+    color:       rgba($text-color, .9);
+    z-index:     100;
     @include animation(move-up 600ms ease-in);
     @include animation-fill-mode(both);
   }
 }
 
-.score-container:after {
-  content: "Score";
+.worldSize-container:after {
+  content: "World Size";
 }
 
-.best-container:after {
-  content: "Best"
+.predatorLocation-container:after {
+  content: "Predator"
+}
+
+.preyLocation-container:after {
+  content: "Prey"
 }
 
 #instructions {
-   padding-top: 0.5em;
+  padding-top: 0.5em;
 
-   .restart-button {
-      margin-top: -0.5em; /* hack */
-   }
+  .restart-button {
+    margin-top: -0.5em; /* hack */
+  }
 }
 
 .restart-button {
-   display: inline-block;
-   background: #8f7a66;
-   border-radius: 3px;
-   padding: 0 20px;
-   text-decoration: none;
-   color: #f9f6f2;
-   height: 40px;
-   line-height: 42px;
-   cursor: pointer;
-   display: block;
-   text-align: center;
-   float: right;
-   border: none;
+  background:      #8f7a66;
+  border-radius:   3px;
+  padding:         0 20px;
+  text-decoration: none;
+  color:           #f9f6f2;
+  height:          40px;
+  line-height:     42px;
+  cursor:          pointer;
+  border:          none;
+  margin-left:     10px;
+
+  &:hover, &:focus {
+    color: white;
+  }
 }
 
 #content {
-   
+
 }
 
 #game-container {
-   position: relative;
-   width: $width;
-   height: $width;
-   margin: 40px auto;
+  position: relative;
+  width:    $width;
+  height:   $width;
+  margin:   1.5em auto;
 }
 
 .game-overlay {
-  width: $width;
-  height: $width;
+  width:            $width;
+  height:           $width;
   background-color: rgba(255, 255, 255, 0.47);
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  text-align: center;
-  padding-top: 35%;
-  font-size: 3em;
-  font-weight: bold;
-  overflow: hidden;
-  box-sizing: border-box;
-  
+  position:         absolute;
+  top:              0;
+  left:             0;
+  z-index:          10;
+  text-align:       center;
+  padding-top:      35%;
+  font-size:        3em;
+  font-weight:      bold;
+  overflow:         hidden;
+  box-sizing:       border-box;
+
   &.ng-enter {
-    @include transition(all 1000ms ease-in);
-    @include transform(translate(0, 100%));
+    @include transition(all 500ms ease-in);
+//    @include transform(translate(0, 100%));
     opacity: 0;
   }
 
   &.ng-enter-active {
-    @include transform(translate(0, 0));
+//    @include transform(translate(0, 0));
     opacity: 1;
   }
 
   .lower {
-    display: block;
+    display:    block;
     margin-top: 29px;
-    font-size: 16px;
+    font-size:  16px;
 
     a {
-       display: inline-block;
-       background: #8f7a66;
-       border-radius: 3px;
-       padding: 0 20px;
-       text-decoration: none;
-       color: #f9f6f2;
-       height: 40px;
-       line-height: 42px;
-       cursor: pointer;
-       margin-left: 9px;
+      display:         inline-block;
+      background:      #8f7a66;
+      border-radius:   3px;
+      padding:         0 20px;
+      text-decoration: none;
+      color:           #f9f6f2;
+      height:          40px;
+      line-height:     42px;
+      cursor:          pointer;
+      margin-left:     9px;
     }
   }
 }
 
 @mixin game-board($tile-count: 4) {
   $tile-size: ($width - $tile-padding * ($tile-count + 1)) / $tile-count;
-  #game-#{$tile-count} { 
-    position: relative;
-    padding: $tile-padding;
-    cursor: default;
-    background: #bbaaa0;
-    border-radius: 6px;
-    width: $width;
-    height: $width;
+  #game-#{$tile-count} {
+    position:           relative;
+    padding:            $tile-padding;
+    cursor:             default;
+    background:         #bbaaa0;
+    border-radius:      6px;
+    width:              $width;
+    height:             $width;
     -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+    -moz-box-sizing:    border-box;
+    box-sizing:         border-box;
 
     .grid-container {
       position: absolute;
-      z-index: 1;
-      margin: 0 auto;
+      z-index:  1;
+      margin:   0 auto;
 
       .grid-cell {
-        width: $tile-size;
-        height: $tile-size;
+        width:         $tile-size;
+        height:        $tile-size;
         margin-bottom: $tile-padding;
-        margin-right: $tile-padding;
-        float: left;
+        margin-right:  $tile-padding;
+        float:         left;
         @include border-radius($tile-radius);
-        background: rgba(238, 228, 218, 0.35);
+        background:    rgba(238, 228, 218, 0.35);
         &:last-child {
           margin-right: 0
         }
@@ -266,34 +263,34 @@ h1.title {
 
     .tile-container {
       position: absolute;
-      z-index: 2;
+      z-index:  2;
 
       .unstyled-tile {
-        font-family: $tile-font;
-        position: absolute;
-        width: $tile-size;
-        height: $tile-size;
-        background: white;
-        margin: 0 auto;
-        font-size: 2em;
-        text-align: center;
+//        font-family: $tile-font;
+        position:    absolute;
+        width:       $tile-size;
+        height:      $tile-size;
+        background:  white;
+        margin:      0 auto;
+//        font-size:   2em;
+        text-align:  center;
         font-weight: bold;
-        z-index: 10;
-        font-size: 2.5em;
+        z-index:     10;
+//        font-size:   2.5em;
         line-height: ($width/$tile-count) - $tile-padding;
       }
       .tile {
-        font-family: $tile-font;
-        position: absolute;
-        width: $tile-size;
-        height: $tile-size;
+        font-family:                 $tile-font;
+        position:                    absolute;
+        width:                       $tile-size;
+        height:                      $tile-size;
         @include border-radius($tile-radius);
         @include transition($transition-time ease-in-out);
         // @include transition-property(transform);
         -webkit-transition-property: -webkit-transform;
-        -moz-transition-property: -moz-transform;
-        transition-property: transform;
-        z-index: 2;
+        -moz-transition-property:    -moz-transform;
+        transition-property:         transform;
+        z-index:                     2;
 
         &.tile-merged .tile-inner {
           @include animation(pop 200ms ease-in);
@@ -306,7 +303,7 @@ h1.title {
             $newX: ($tile-size) * ($zeroOffsetX) + ($tile-padding * $zeroOffsetX);
             $newY: ($tile-size) * ($zeroOffsetY) + ($tile-padding * $zeroOffsetY);
 
-            &.position-#{$zeroOffsetX}-#{$zeroOffsetY} { 
+            &.position-#{$zeroOffsetX}-#{$zeroOffsetY} {
               @include transform(translate($newX, $newY));
             }
           }
@@ -324,10 +321,14 @@ h1.title {
         .tile-inner {
           line-height: ($width/$tile-count) - $tile-padding;
 
-          text-align: center;
+          text-align:  center;
           font-weight: bold;
-          z-index: 10;
-          font-size: 2.5em;
+          z-index:     10;
+//          font-size:   2.5em;
+        }
+
+        img.actor {
+          max-width: 100%;
         }
       }
     }
@@ -350,7 +351,7 @@ h1.title {
   100% {
     opacity: 1;
     @include transform(scale(1));
-  } 
+  }
 }
 
 @include keyframes(pop) {
@@ -366,4 +367,8 @@ h1.title {
     opacity: 0;
     @include transform(scale(1));
   }
+}
+
+.no-lineheight {
+  line-height: 0 !important;
 }
