--- a/app/views/main.html
+++ b/app/views/main.html
@@ -67,6 +67,11 @@
 		</div>
 	</div>
 
+	<div class="learning row">
+		<canvas id="chart"></canvas>
+		<textarea id="stateSpaceOutput" class="col-xs-12"></textarea>
+	</div>
+
 	<div id="game-container">
 		<div grid ng-model='ctrl.game' class="row"></div>
 		<div id="test-result" ng-show="ctrl.isShowResult">
