--- a/assets/views/single-agent-learning.html
+++ b/assets/views/single-agent-learning.html
@@ -8,21 +8,21 @@
 		<!-- config form -->
 		<div id="setting-box" class="row">
 			<div class="cols-xs-12">
-				<label class="col-xs-4">#Trials:</label>
+				<label class="col-xs-4 text-left">#Trials:</label>
 				<div class="col-xs-8">
 					<input class="form-control" ng-model="ctrl.config.nLearning">
 				</div>
 			</div>
 
 			<div class="cols-xs-12">
-				<label class="col-xs-4">Discount Factor:</label>
+				<label class="col-xs-4 text-left">Discount Factor:</label>
 				<div class="col-xs-8">
 					<input class="form-control" ng-model="ctrl.config.gamma">
 				</div>
 			</div>
 
 			<div class="cols-xs-12">
-				<label class="col-xs-4">Learning Rate:</label>
+				<label class="col-xs-4 text-left">Learning Rate:</label>
 				<div class="col-xs-8">
 					<input class="form-control" ng-model="ctrl.config.alpha">
 				</div>
@@ -36,16 +36,23 @@
 			</div>
 
 			<div class="cols-xs-12">
-				<label class="col-xs-4">Soft Policy:</label>
+				<label class="col-xs-4 text-left">Soft Policy:</label>
 				<div class="col-xs-8">
 					<input class="form-control" ng-model="ctrl.config.actionSelector">
 				</div>
 			</div>
 
 			<div class="cols-xs-12">
-				<label class="col-xs-4">Soft Policy Factor:</label>
+				<label class="col-xs-4 text-left">Soft Policy Factor:</label>
 				<div class="col-xs-8">
 					<input class="form-control" ng-model="ctrl.config.epsilon">
+				</div>
+			</div>
+
+			<div class="cols-xs-12">
+				<label class="col-xs-4 text-left">Algorithm:</label>
+				<div class="col-xs-8">
+					<input class="form-control" ng-model="ctrl.config.algorithm">
 				</div>
 			</div>
 
@@ -54,19 +61,16 @@
 		<div class="row">
 			<div class="cols-xs-12 text-right">
 				<button ng-click='ctrl.runInference(ctrl.config)' ng-disabled="ctrl.isBusy" class="btn restart-button">Inference</button>
-				<button ng-click='ctrl.sarsa()' ng-disabled="ctrl.isBusy" class="btn restart-button">Sarsa</button>
 			</div>
 		</div>
 
 		<div class="learning row">
-			<div class="cols-xs-12" style="height: 300px">
+			<div class="cols-xs-12" style="min-height: 300px; margin-bottom: 20px">
 				<highchart id="chart1" config="ctrl.salGraphAverageSteps"></highchart>
 			</div>
-			<div class="cols-xs-12" style="height: 300px">
+			<div class="cols-xs-12" style="min-height: 300px">
 				<highchart id="chart1" config="ctrl.salGraphOptimalActions"></highchart>
 			</div>
-
-			<textarea id="stateSpaceOutput" class="col-xs-12"></textarea>
 		</div>
 
 	</div>
