--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -24,6 +24,7 @@
     <script src="/js/_bower.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/async.js"></script>
+    <script src="/js/brain/SingleAgentLearningService.js"></script>
     <script src="/js/brain/agent.js"></script>
     <script src="/js/brain/helperFunctions.js"></script>
     <script src="/js/brain/simulator.js"></script>
