updated cover page

--- a/assets/views/main.html
+++ b/assets/views/main.html
@@ -23,15 +23,17 @@
 			<div class="inner cover">
 				<h1 class="cover-heading">AA demo</h1>
 				<p class="lead">
-					is an implementation of Markov Decision Process (MDP). </br>
+					is an implementation of </br> Markov Decision Process (MDP) algorithms.
+				</p>
+				<p>
 					This implementation shows three cases: </br>
 					<a href="#/single-agent-planning">Single-agent planning</a>,</br>
 					<a href="#/single-agent-learning">Single-agent learning</a>, and </br>
 					<a href="#/multi-agent-system">Multi-agent system</a>
 				</p>
-				<p class="lead">
-					<a href="#" class="btn btn-lg btn-default">Learn more</a>
-				</p>
+				<!--<p class="lead">-->
+					<!--<a href="#" class="btn btn-lg btn-default">Learn more</a>-->
+				<!--</p>-->
 			</div>
 
 			<div class="mastfoot">
@@ -47,5 +49,6 @@
 </div>
 
 <div class="page-image-citation">
-	Image source: Sheldon. (2012) <em>Bright Colored Emotions</em> http://good-wallpapers.com/abstract/15374
+	Image source: Skecthbook Jack. <em>Albert Einstein Physics Chalk Board Math</em>
+	http://www.wallpaperup.com/117894/Albert_Einstein_Physics_Chalk_Board_Math.html
 </div>
